--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
         // This key must match the public key used on your Node.js backend server.
         const VAPID_PUBLIC_KEY = 'BNxogBnP7UQvmyagjJ9R1Sxa7I6_Kp-51WWewWsUEkH1Jx_km8ayUSPuTQ5Fbe2fjoF2zBchQ1KfMLJd9aCEWhI'; // Replace with your actual VAPID Public Key
         // URL of your Node.js backend server for push notifications
-        const BACKEND_SERVER_URL = 'https://your-fixflow-backend.onrender.com'; // Replace with your actual backend server URL
+        const BACKEND_SERVER_URL = 'https://webput.onrender.com'; // Replace with your actual backend server URL
 
         // =================================================================================
         // PWA & NOTIFICATION LOGIC
