--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
         const CLOUDINARY_URL = "https://api.cloudinary.com/v1_1/dsmiqo5si/image/upload";
         const CLOUDINARY_UPLOAD_PRESET = "FixFlow";
         // NEW: Notification Configuration
-        const BACKEND_SERVER_URL = "https://web.onrender.com"; // URL ของ Node.js server ของคุณ
+        const BACKEND_SERVER_URL = "https://webput.onrender.com"; // URL ของ Node.js server ของคุณ
         const VAPID_PUBLIC_KEY = "BNxogBnP7UQvmyagjJ9R1Sxa7I6_Kp-51WWewWsUEkH1Jx_km8ayUSPuTQ5Fbe2fjoF2zBchQ1KfMLJd9aCEWhI"; // VAPID Key ที่ได้จาก server.js
 
 
