--- a/index.html
+++ b/index.html
@@ -103,6 +103,14 @@
                 height: 100%;
             }
         }
+
+        /* MODIFIED: Add safe area padding for the full-screen dashboard modal on mobile */
+        #tech-dashboard-modal > div.flex.flex-col {
+            padding-top: env(safe-area-inset-top);
+            padding-bottom: env(safe-area-inset-bottom);
+            padding-left: env(safe-area-inset-left);
+            padding-right: env(safe-area-inset-right);
+        }
     </style>
 </head>
 <body class="bg-gray-50 dark:bg-gray-900 text-gray-800 dark:text-gray-200">
@@ -1469,7 +1477,7 @@
             try {
                 const techRequests = allRequests.filter(req => String(req.assignedToId) === String(techId));
                 updateSummaryCards(techRequests, 'tech-summary');
-                renderRequests(techRequests, currentUser);
+                renderRequests(techRequests, techDashboardRequests, currentUser);
             } catch (error) {
                 techDashboardRequests.innerHTML = `<p class="text-red-500 col-span-full text-center py-12">เกิดข้อผิดพลาด: ${error.message}</p>`;
             }
