--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       If zooming is still disabled, it might be due to a device-specific setting
       or a browser accessibility feature. The code itself permits zooming.
     -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ระบบแจ้งปัญหา</title>
 
     <!-- PWA Meta Tags -->
