--- a/index.html
+++ b/index.html
@@ -590,8 +590,8 @@
         // CONFIGURATION
         // =================================================================================
         const GAS_API_URL = "https://script.google.com/macros/s/AKfycbyU2WVUj8eZwlx2UBVj7bAF0SSU6hOs1Tloq4hX2L8ctiKDk_n17vDecxzkLQ3dFoF7/exec";
-        const CLOUDINARY_URL = "https://api.cloudinary.com/v1_1/dsmiqo5si/image/upload";
-        const CLOUDINARY_UPLOAD_PRESET = "FixFlow";
+        const CLOUDINARY_URL = "https://api.cloudinary.com/v1_1/dsqvhurw9/image/upload";
+        const CLOUDINARY_UPLOAD_PRESET = "SafetyCN";
         const BACKEND_SERVER_URL = "https://webput.onrender.com";
         const VAPID_PUBLIC_KEY = "BBqT2dI697K39K1-0SAiJ0yPLhco0wtVWUMQnzq9NPYhW85gFdkuOSl86fOeDuiE1mUHFble7kUiTPYROk7BBsU";
 
