--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="theme-color" content="#3b82f6"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="description" content="เว็บแอปพลิเคชันสำหรับค้นหาและแจ้งอันตรายภายในองค์กร">
+    <meta name="description" content="เว็บแอปพลิเคชันสำหรับแจ้งปัญหา">
     <link rel="manifest" href="./manifest.json">
     <link rel="apple-touch-icon" href="icon-192.png">
 
@@ -479,7 +479,7 @@
                     <i data-lucide="alert-triangle" class="h-6 w-6 text-red-600 dark:text-red-400"></i>
                 </div>
                 <h3 class="text-xl font-bold mt-4 text-gray-800 dark:text-white">ยืนยันการลบ</h3>
-                <p class="text-gray-500 dark:text-gray-400 mt-2">คุณแน่ใจหรือไม่ว่าต้องการลบรายการแจ้งอันตรายนี้? การกระทำนี้ไม่สามารถย้อนกลับได้</p>
+                <p class="text-gray-500 dark:text-gray-400 mt-2">คุณแน่ใจหรือไม่ว่าต้องการลบรายการแจ้งปัญหานี้? การกระทำนี้ไม่สามารถย้อนกลับได้</p>
                 <div class="mt-6 flex justify-center gap-4">
                     <button id="confirm-delete-no-btn" class="py-2 px-6 bg-gray-100 dark:bg-gray-700 text-gray-700 dark:text-gray-200 font-semibold rounded-lg hover:bg-gray-200 dark:hover:bg-gray-600">ยกเลิก</button>
                     <button id="confirm-delete-yes-btn" class="py-2 px-6 bg-red-600 text-white font-semibold rounded-lg hover:bg-red-700">ใช่, ลบเลย</button>
@@ -937,7 +937,7 @@
             if (requests && requests.length > 0) {
                 requests.forEach(req => container.innerHTML += createRequestCard(req, userSession));
             } else {
-                container.innerHTML = '<p class="text-gray-500 col-span-full text-center py-12">ไม่พบรายการแจ้งอันตราย</p>';
+                container.innerHTML = '<p class="text-gray-500 col-span-full text-center py-12">ไม่พบรายการแจ้งปัญหา</p>';
             }
             lucide.createIcons();
         }
@@ -1214,13 +1214,13 @@
 
                 const result = await callGasApi({ action: 'createRequest', data: requestData });
                 if (result) {
-                    showMessageModal('สำเร็จ', 'แจ้งอันตรายสำเร็จ', 'success');
+                    showMessageModal('สำเร็จ', 'แจ้งปัญหาสำเร็จ', 'success');
                     setTimeout(async () => {
                         showNewRequestModal(false);
                         await loadDashboardData(false);
                     }, 300);
                 } else {
-                    throw new Error('ไม่สามารถสร้างใบแจ้งอันตรายได้ กรุณาลองใหม่อีกครั้ง');
+                    throw new Error('ไม่สามารถสร้างใบแจ้งปัญหาได้ กรุณาลองใหม่อีกครั้ง');
                 }
             } catch (error) {
                 showMessageModal('ข้อผิดพลาด', `เกิดข้อผิดพลาด: ${error.message}`, 'error');
