--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <!-- Main App Page (Requester & Admin) -->
         <div id="main-app-page" class="hidden">
             <!-- Header -->
-            <header class="bg-white dark:bg-gray-900 shadow-md sticky top-0 z-40 backdrop-blur-lg">
+            <header class="bg-white dark:bg-gray-900 shadow-md sticky top-0 z-40">
                 <div class="container mx-auto px-4 py-3">
                     <div class="flex justify-between items-center">
                         <div class="flex items-center gap-3">
