--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                 <i data-lucide="arrow-left" class="w-4 h-4"></i>
                                 กลับไปแดชบอร์ด
                             </button>
-                            <h2 class="text-2xl sm:text-3xl font-bold text-gray-800 dark:text-white">รายการแจ้งปัญหาของคุณ</h2>
+                            <h2 class="text-2xl sm:text-3xl font-bold text-gray-800 dark:text-white">รายการแจ้งของคุณ</h2>
                             <button id="desktop-refresh-btn-requester" class="p-2 rounded-full text-gray-500 dark:text-gray-400 hover:bg-gray-200 dark:hover:bg-gray-700 transition-colors" title="รีเฟรชรายการ">
                                 <i data-lucide="refresh-cw" class="w-5 h-5"></i>
                             </button>
