--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     </button>
                 </form>
                 <p id="login-error" class="text-red-500 text-sm mt-4 text-center h-5"></p>
-                <div class="text-center mt-4 hidden">
+                <div class="text-center mt-4">
                     <a href="#" id="show-register-modal-btn" class="text-sm text-blue-600 hover:underline dark:text-blue-400">ยังไม่เคยใช้งาน? ลงทะเบียนที่นี่</a>
                 </div>
             </div>
